# paste-client-python

./: .gitignore  paste.spec  project-tracker.org  pyproject.toml
paste_client_python/: __init__.py  __main__.py  helper_function.py  launcher.py  main.py  paste_client.py  qtgui.py  websocket_client.py
paste_client_python/qtgui/: config_page.py  config_page.ui  mainwindow.py  page_collection.py  system_tray.py
paste_client_python/qtgui/config_page/: config_page.py  window.py  window.ui
paste_client_python/qtgui/main_window/: mainwindow.py  window.py  window.ui
tests/: test_paste_client_python.py
