[tool.poetry]
authors = ["tpob <tpob@tpob.xyz>"]
description = ""
name = "paste-client-python"
version = "0.1.0"

[tool.poetry.dependencies]
PySide6 = "^6.2.1"
python = ">=3.9,<3.11"
PyNaCl = "^1.4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
pytest = "^5.2"
pyinstaller = "^4.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
